--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+env.yml
 .env
 .venv
 env/
@@ -129,6 +130,7 @@ env.bak/
 venv.bak/
 ansible.cfg
 inventory/
+DevelopmentDocs/
 
 
 # Spyder project settings
@@ -154,3 +156,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Github excludes
+k3s-ansible/
+k3sup/
+k3sup
