--- a/roles/transmission/tasks/transmission_container.yml
+++ b/roles/transmission/tasks/transmission_container.yml
@@ -24,7 +24,6 @@
             - name: transmission
               image: "{{ transmission_image }}"
               ports:
-                - containerPort: 80
                 - containerPort: 9091
                 - containerPort: 51413
                 # Ensure the UDP port is correctly specified
@@ -47,6 +46,11 @@
                   mountPath: "/config"
                 - name: downloads
                   mountPath: "/downloads"
+                - name: watch  
+                  mountPath: "/watch"
+              securityContext:
+                capabilities:
+                  add: ["CHOWN", "DAC_OVERRIDE", "FOWNER", "KILL", "SETGID", "SETUID"]
             volumes:
               - name: config
                 persistentVolumeClaim:
@@ -54,3 +58,7 @@
               - name: downloads
                 persistentVolumeClaim:
                   claimName: transmission-downloads-claim
+              - name: watch
+                persistentVolumeClaim:
+                  claimName: transmission-watch-claim
+                      
