updateing setup, troubleshooting transmission

--- a/homelab.yml
+++ b/homelab.yml
@@ -31,6 +31,17 @@
     - role: techno_tim.k3s_ansible.proxmox_lxc
       when: k3s_enabled and proxmox_lxc_configure
 
+- name: Prepare k3s cluster nodes
+  hosts: k3s_cluster
+  gather_facts: true
+  become: true
+  environment: "{{ proxy_env | default({}) }}"
+  roles:
+    - role: k3s_prereq
+      when: k3s_enabled 
+  tags:
+    - deploy_k3s_prereq
+
 - name: Prepare k3s nodes
   hosts: k3s_cluster
   gather_facts: true
