--- a/roles/transmission/defaults/main.yml
+++ b/roles/transmission/defaults/main.yml
@@ -5,6 +5,7 @@ transmission_puid: "{{ lookup('env', 'TRANSMISSION_PUID') | default('1000', true
 transmission_pgid: "{{ lookup('env', 'TRANSMISSION_PGID') | default('1000', true) }}"
 transmission_tz: "{{ lookup('env', 'TRANSMISSION_TZ') | default('UTC', true) }}"
 transmission_image: "{{ lookup('env', 'TRANSMISSION_IMAGE') | default('lscr.io/linuxserver/transmission:latest', true) }}"
+transmission_web_ui: "{{ lookup('env', 'TRANSMISSION_WEB_UI') | default('combustion', true) }}"
 transmission_user: "{{ lookup('env', 'TRANSMISSION_USER') | default('user', true) }}"
 transmission_password: "{{ lookup('env', 'TRANSMISSION_PASSWORD') | default('password', true) }}"
 transmission_white_list: "{{ lookup('env', 'TRANSMISSION_WHITE_LIST') | default('', true) }}"
@@ -19,3 +20,10 @@ transmission_config: "{{ lookup('env', 'TRANSMISSION_CONFIG') | default('', true
 transmission_downloads: "{{ lookup('env', 'TRANSMISSION_DOWNLOADS') | default('', true) }}"
 transmission_watch: "{{ lookup('env', 'TRANSMISSION_WATCH') | default('', true) }}"
 transmission_storage_nfs_server_ip: "{{ lookup('env', 'TRANSMISSION_STORAGE_NFS_SERVER_IP') | default('', true) }}"
+transmission_local_network: "{{ lookup('env', 'TRANSMISSION_LOCAL_NETWORK') | default('', true) }}"
+transmission_openvpn_enabled: "{{ lookup('env', 'TRANSMISSION_OPENVPN_ENABLED') | default('false', true) }}"
+transmission_openvpn_provider: "{{ lookup('env', 'TRANSMISSION_OPENVPN_PROVIDER') | default('torguard', true) }}" 
+transmission_openvpn_config: "{{ lookup('env', 'TRANSMISSION_OPENVPN_CONFIG') | default('USA-DALLAS', true) }}" 
+transmission_openvpn_username: "{{ lookup('env', 'TRANSMISSION_OPENVPN_USERNAME') | default('terry.alsdorf@gmail.com', true) }}" 
+transmission_openvpn_password: "{{ lookup('env', 'TRANSMISSION_OPENVPN_PASSWORD') | default('password', true) }}"
+transmission_openvpn_options: "{{ lookup('env', 'TRANSMISSION_OPENVPN_OPTIONS') | default('--inactive 3600 --ping 10 --ping-exit 60', true) }}" 
