updating for ansible modules

--- a/example.env
+++ b/example.env
@@ -20,7 +20,7 @@ SYNOLOGY_ENABLED=false
 
 DOCKER_SERVER_ENABLED=false
 
-PROXMOX_ENABLED=false
+PROXMOX_SERVER_ENABLED=false
 
 OPENAI_API_ENABLED=false
 OPENAI_API_KEY=
